chore: restore entrypoint project at `cli`
Signed-off-by: Sam Gammon <sam@elide.ventures>